move actions out of entities list for perf reasons (#984)
* move actions out of entities list for perf reasons

* fixes

* fix button

* fix onclose

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -461,11 +461,11 @@
 	"ner-family-dialog.upload-csv-button": "Select CSV",
 	"ner-family-dialog.upload-csv-format": "Expected CSV format: one column with one named entity per row.",
 	"ner-family-dialog.upload-csv-title": "Upload a CSV file",
-	"ner-family-toolbar.add-button": "Add NER",
+	"ner-family-toolbar.add-button": "Add NER to family",
 	"ner-family-toolbar.edit-button": "Edit NER family",
 	"ner-family-toolbar.remove-button": "Delete NER family",
-	"ner-list.add-duplicate-tooltip": "Add as duplicate of",
-	"ner-list.delete-entity-tooltip": "Delete entity",
+	"ner-list.add-duplicate-tooltip": "Mark seleted NER as duplicate of",
+	"ner-list.delete-entity-tooltip": "Delete selected NER",
 	"ner-list.duplicates": "Duplicates",
 	"ner-list.duplicates-of": "Duplicates of",
 	"ner-list.remove-duplicate-tooltip": "Move out of duplicates",
