--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -458,11 +458,11 @@
 	"ner-family-dialog.upload-csv-button": "Seleccione CSV",
 	"ner-family-dialog.upload-csv-format": "Formato CSV esperado: una columna con una entidad nombrada por fila.",
 	"ner-family-dialog.upload-csv-title": "Subir un archivo CSV",
-	"ner-family-toolbar.add-button": "Añadir NER",
+	"ner-family-toolbar.add-button": "Agregar NER a la familia",
 	"ner-family-toolbar.edit-button": "Editar la familia NER",
 	"ner-family-toolbar.remove-button": "Suprimir la familia NER",
-	"ner-list.add-duplicate-tooltip": "Añadir como duplicado de",
-	"ner-list.delete-entity-tooltip": "Eliminar entidad",
+	"ner-list.add-duplicate-tooltip": "Mark seleccionó NER como duplicado de",
+	"ner-list.delete-entity-tooltip": "Eliminar NER seleccionado",
 	"ner-list.duplicates": "Duplicados",
 	"ner-list.duplicates-of": "Duplicados de",
 	"ner-list.remove-duplicate-tooltip": "Salir de duplicados",
