[sc-7098] Manage /chat http errors

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -1,5 +1,6 @@
 {
 	"answer.chat-action": "Xateja amb els teus documents",
+	"answer.error.rephrasing": "Ho sento, no puc processar aquesta pregunta, potser ajudaria a reformular-la.",
 	"answer.input.label": "Entrada de xat",
 	"answer.placeholder": "Parlem",
 	"answer.sources": "A partir d'aquestes fonts",
