--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,5 +1,6 @@
 {
 	"answer.chat-action": "Chatea con tus documentos",
+	"answer.error.rephrasing": "Lo siento, no puedo procesar esta pregunta, tal vez reformularla ayudaría.",
 	"answer.input.label": "Entrada de chat",
 	"answer.placeholder": "Charlemos",
 	"answer.sources": "Basado en estas fuentes",
