--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -1,5 +1,6 @@
 {
 	"answer.chat-action": "Discutez avec vos documents",
+	"answer.error.rephrasing": "Désolé, je ne peux pas traiter cette question, peut-être que la reformuler aiderait.",
 	"answer.input.label": "Champ de saisie du chat",
 	"answer.placeholder": "Discutons",
 	"answer.sources": "Sur la base de ces sources",
