[sc-7104] ask for confirmation before reprocessing

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -513,11 +513,12 @@
 	"resource.classification-page-link": "pàgina de Classificació",
 	"resource.confirm-delete.description": "Si suprimiu aquest recurs, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
 	"resource.confirm-delete.plural-description": "Si suprimiu aquests recursos, tota la informació, camps i entitats creades durant el seu processament desapareixeran. No podeu desfer aquesta acció.",
+	"resource.confirm-delete.plural-title": "Esteu segur que voleu suprimir els recursos?",
 	"resource.confirm-delete.title": "Esteu segur que voleu suprimir el recurs?",
 	"resource.confirm-reprocess.description": "Necessitem un temps per processar les dades. Un cop reprocessat el podeu veure a la pàgina de la llista de recursos disponible per editar, classificar o anotar.",
+	"resource.confirm-reprocess.plural-description": "Necessitem un temps per processar les dades. Un cop reprocessats els podeu veure a la pàgina de llista de recursos disponible per editar, classificar o anotar.",
+	"resource.confirm-reprocess.plural-title": "Esteu segur que voleu tornar a processar els recursos?",
 	"resource.confirm-reprocess.title": "Esteu segur que voleu tornar a processar el recurs?",
-	"resource.delete_resource_confirm": "Vols suprimir el recurs?",
-	"resource.delete_resources_confirm": "Vols suprimir recursos?",
 	"resource.description.title": "Descripció",
 	"resource.empty": "No hi ha contingut al vostre caixa de coneixement en aquest moment.",
 	"resource.empty_import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
