--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -513,11 +513,12 @@
 	"resource.classification-page-link": "página de Clasificación",
 	"resource.confirm-delete.description": "Si elimina este recurso, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
 	"resource.confirm-delete.plural-description": "Si elimina esos recursos, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
+	"resource.confirm-delete.plural-title": "¿Está seguro de que desea eliminar los recursos?",
 	"resource.confirm-delete.title": "¿Está seguro de que desea eliminar el recurso?",
 	"resource.confirm-reprocess.description": "Necesitamos algo de tiempo para procesar los datos. Una vez reprocesado, puede verlo en la página de la lista de recursos disponible para editar, clasificar o anotar.",
+	"resource.confirm-reprocess.plural-description": "Necesitamos algún tiempo para procesar los datos. Una vez reprocesados, podrá verlos en la página de la lista de recursos disponibles para editarlos, clasificarlos o anotarlos.",
+	"resource.confirm-reprocess.plural-title": "¿Está seguro de que desea reprocesar los recursos?",
 	"resource.confirm-reprocess.title": "¿Está seguro de que desea volver a procesar el recurso?",
-	"resource.delete_resource_confirm": "¿Eliminar recurso?",
-	"resource.delete_resources_confirm": "¿Eliminar recursos?",
 	"resource.description.title": "Descripción",
 	"resource.empty": "No hay contenido en su caja de conocimiento en este momento.",
 	"resource.empty_import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
