--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -509,11 +509,12 @@
 	"resource.classification-page-link": "Page de classement",
 	"resource.confirm-delete.description": "Si vous supprimez cette ressource, toutes les informations, champs et entités créés lors de son traitement disparaîtront. Vous ne pouvez pas annuler cette action.",
 	"resource.confirm-delete.plural-description": "Si vous supprimez ces ressources, toutes les informations, champs et entités créés lors de leur traitement disparaîtront. Vous ne pouvez pas annuler cette action.",
+	"resource.confirm-delete.plural-title": "Êtes-vous sûr de vouloir supprimer les ressources ?",
 	"resource.confirm-delete.title": "Êtes-vous sûr de vouloir supprimer la ressource ?",
 	"resource.confirm-reprocess.description": "Nous avons besoin de temps pour traiter les données. Une fois retraité, vous pouvez le voir sur la page de liste des ressources disponible pour l'édition, la classification ou l'annotation.",
+	"resource.confirm-reprocess.plural-description": "Nous avons besoin d'un certain temps pour traiter les données. Une fois retraitées, vous pourrez les voir sur la page de la liste des ressources et les éditer, les classer ou les annoter.",
+	"resource.confirm-reprocess.plural-title": "Êtes-vous sûr de vouloir retraiter les ressources ?",
 	"resource.confirm-reprocess.title": "Êtes-vous sûr de vouloir retraiter la ressource ?",
-	"resource.delete_resource_confirm": "Supprimer la ressource ?",
-	"resource.delete_resources_confirm": "Supprimer des ressources ?",
 	"resource.description.title": "La description",
 	"resource.empty": "Il n'y a aucun contenu dans votre boîte de connaissances pour le moment.",
 	"resource.empty_import": "Commencez à utiliser Nuclia instantanément en choisissant un exemple d'ensemble de données. C'est le moyen le plus rapide de commencer et d'explorer le fonctionnement de Nuclia.",
