--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -516,11 +516,12 @@
 	"resource.classification-page-link": "Classification page",
 	"resource.confirm-delete.description": "If you delete this resource all information, fields, and entities created during its processing will disappear. You cannot undo this action. ",
 	"resource.confirm-delete.plural-description": "If you delete those resources all information, fields, and entities created during its processing will disappear. You cannot undo this action. ",
+	"resource.confirm-delete.plural-title": "Are you sure you want to delete the resources?",
 	"resource.confirm-delete.title": "Are you sure you want to delete the resource?",
 	"resource.confirm-reprocess.description": "We need some time to process the data. Once reprocessed you can see it on the resource list page available for editing, classifying or annotating.",
+	"resource.confirm-reprocess.plural-description": "We need some time to process the data. Once reprocessed you can see them on the resource list page available for editing, classifying or annotating.",
+	"resource.confirm-reprocess.plural-title": "Are you sure you want to reprocess the resources?",
 	"resource.confirm-reprocess.title": "Are you sure you want to reprocess the resource?",
-	"resource.delete_resource_confirm": "Delete resource?",
-	"resource.delete_resources_confirm": "Delete resources?",
 	"resource.description.title": "Description",
 	"resource.empty": "There is no content in your knowledge box at the moment.",
 	"resource.empty_import": "Start using Nuclia instantly by picking a sample dataset. This is the fastest way to get started and explore how Nuclia works.",
