Add landing page

--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -15,6 +15,9 @@
 	"history.knowledge_box": "Knowledge box",
 	"history.source": "Source",
 	"history.title": "Upload history",
+	"home.active-connectors": "or check your active connectors in the list on the the left.",
+	"home.new-connector": "Click the button below to add a new connector to your Nuclia account",
+	"home.welcome": "Welcome",
 	"login.button": "Log in",
 	"login.headline": "The easiest and fastest way to ingest data",
 	"login.not-connected": "You’re not connected, click the button to log in",
@@ -30,6 +33,8 @@
 	"upload.destination.title": "Define the destination",
 	"upload.folder.drop": "Drop folder here",
 	"upload.folder.selected": "Selected folder has {{num}} files",
+	"upload.add-connector": "Add connector",
+	"upload.connectors": "Connectors",
 	"upload.refresh": "Refresh {{field}}",
 	"upload.s3.region": "Region",
 	"upload.s3.region_help": "e.g. us-east-1",
