--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -15,6 +15,9 @@
 	"history.knowledge_box": "Caja de conocimiento",
 	"history.source": "Origen",
 	"history.title": "Historial de subidas",
+	"home.active-connectors": "o verifique sus conectores activos en la lista de la izquierda.",
+	"home.new-connector": "Haga clic en el botón a continuación para agregar un nuevo conector a tu cuenta de Nuclia",
+	"home.welcome": "Bienvenido/a",
 	"login.button": "Iniciar sesión",
 	"login.headline": "La manera fácil y rápida de ingerir datos",
 	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
@@ -30,6 +33,8 @@
 	"upload.destination.title": "Definir la destinación",
 	"upload.folder.drop": "Arrastra una carpeta",
 	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
+	"upload.add-connector": "Añadir conector",
+	"upload.connectors": "Conectores",
 	"upload.refresh": "Refrescar {{field}}",
 	"upload.s3.region": "Región",
 	"upload.s3.region_help": "Por ejemplo: eu-west-3",
