--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -15,6 +15,9 @@
 	"history.knowledge_box": "Knowledge box",
 	"history.source": "Source",
 	"history.title": "Historique des téléchargements",
+	"home.active-connectors": "ou vérifiez vos connecteurs actifs dans la liste de gauche.",
+	"home.new-connector": "Cliquez sur le bouton ci-dessous pour ajouter un nouveau connecteur à votre compte Nuclia",
+	"home.welcome": "Bienvenu/e",
 	"login.button": "Se connecter",
 	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
@@ -30,6 +33,8 @@
 	"upload.destination.title": "Définir la destination",
 	"upload.folder.drop": "Poser le dossier ici",
 	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
+	"upload.add-connector": "Ajouter un connecteur",
+	"upload.connectors": "Connecteurs",
 	"upload.refresh": "Rafraîchir {{field}}",
 	"upload.s3.region": "Région",
 	"upload.s3.region_help": "par exemple: eu-west-3",
