--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -15,6 +15,9 @@
 	"history.knowledge_box": "Caixa de coneixement",
 	"history.source": "Origen",
 	"history.title": "Historial de pujades",
+	"home.active-connectors": "o comproveu els vostres connectors actius a la llista de l'esquerra.",
+	"home.new-connector": "Feu clic al botó següent per afegir un nou connector al vostre compte de Nuclia",
+	"home.welcome": "Benvingut/da",
 	"login.button": "Accedir",
 	"login.headline": "La forma més fàcil i ràpida d'ingerir dades",
 	"login.not-connected": "No esteu connectat, feu clic al botó per iniciar sessió al navegador",
@@ -30,6 +33,8 @@
 	"upload.destination.title": "Definir la destinació",
 	"upload.folder.drop": "Arrossega una carpeta",
 	"upload.folder.selected": "La carpeta conté {{num}} arxius",
+	"upload.add-connector": "Afegir connector",
+	"upload.connectors": "Connectors",
 	"upload.refresh": "Actualització {{field}}",
 	"upload.s3.region": "Regió",
 	"upload.s3.region_help": "Per exemple: eu-west-3",
