[sc-6984] Implement new desktop UX

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -3,8 +3,9 @@
 	"account.trial-end.title": "Oh! La teva prova gratuïta ha finalitzat",
 	"account.trial-end.upgrade": "Subscriu-te",
 	"generic.cancel": "Cancel·lar",
+	"generic.delete": "Eliminar",
 	"generic.logout": "Sortir",
-	"generic.save_continue": "Desar i continuar",
+	"generic.save": "Desar",
 	"generic.server_down": "El servidor de sincronització està inactiu",
 	"generic.server_up": "El servidor de sincronització està activat",
 	"generic.switch_account": "Canviar de compte",
@@ -28,11 +29,6 @@
 	"pastanaga.datetime.minutesAgo": "Fa {{minutes}} minuts",
 	"pastanaga.datetime.one-minute-ago": "Fa 1 min",
 	"pastanaga.datetime.yesterday": "Ahir",
-	"upload.data": "Pujar dades",
-	"upload.destination.description": "Envia les dades seleccionades a",
-	"upload.destination.title": "Definir la destinació",
-	"upload.folder.drop": "Arrossega una carpeta",
-	"upload.folder.selected": "La carpeta conté {{num}} arxius",
 	"upload.add-connector": "Afegir connector",
 	"upload.connectors": "Connectors",
 	"upload.refresh": "Actualització {{field}}",
@@ -47,14 +43,17 @@
 	"upload.server.local-button": "Utilitzeu el servidor local",
 	"upload.server.title": "Connecteu-vos al servidor de sincronització",
 	"upload.server.url": "URL del servidor",
-	"upload.source.confirm-delete": "Realment voleu suprimir aquesta font?",
+	"upload.source.confirm-delete-description": "Si elimines aquest connector, es cancel·laran totes les pujades actives d'aquest connector. No podeu desfer aquesta acció.",
+	"upload.source.confirm-delete-title": "Estas segur que voleu eliminar el connector {{name}}?",
 	"upload.source.description": "Trieu l'origen des del qual voleu pujar tots els fitxers",
+	"upload.source.destination": "Envieu les dades seleccionades a",
 	"upload.source.help": "Consulta la documentació sobre com afegir arxius des de {{source}}.",
+	"upload.source.name": "Anomena el teu connector",
 	"upload.source.permanent-sync": "Sincronització permanent",
-	"upload.source.quick_access_name": "Anomena el teu connector",
+	"upload.source.settings": "Configuració del connector",
+	"upload.source.settings-description": "Anomena configura el teu connector",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Escollir dades",
-	"upload.steps.destination": "Destinació",
 	"upload.steps.source": "Selecciona l'origen"
 }
