[sc-6984] Implement new desktop UX (#995)
* Add landing page

* Modify sidebar

* [sc-6984] Implement new desktop UX

* Fix tests

* Fix test

* Small improvements

* Increase version

--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -3,8 +3,9 @@
 	"account.trial-end.title": "¡Oh! Su prueba gratuita ha finalizado",
 	"account.trial-end.upgrade": "Suscribir",
 	"generic.cancel": "Cancelar",
+	"generic.delete": "Eliminar",
 	"generic.logout": "Salir",
-	"generic.save_continue": "Guardar y continuar",
+	"generic.save": "Guardar",
 	"generic.server_down": "El servidor de sincronización está inactivo",
 	"generic.server_up": "El servidor de sincronización está activo",
 	"generic.switch_account": "Cambia de cuenta",
@@ -15,6 +16,9 @@
 	"history.knowledge_box": "Caja de conocimiento",
 	"history.source": "Origen",
 	"history.title": "Historial de subidas",
+	"home.active-connectors": "o verifique sus conectores activos en la lista de la izquierda.",
+	"home.new-connector": "Haga clic en el botón a continuación para agregar un nuevo conector a tu cuenta de Nuclia",
+	"home.welcome": "Bienvenido/a",
 	"login.button": "Iniciar sesión",
 	"login.headline": "La manera fácil y rápida de ingerir datos",
 	"login.not-connected": "No estás conectado, haz clic en el botón para iniciar sesión en el navegador",
@@ -25,11 +29,8 @@
 	"pastanaga.datetime.minutesAgo": "Hace {{minutes}} minutos",
 	"pastanaga.datetime.one-minute-ago": "Hace 1 minuto",
 	"pastanaga.datetime.yesterday": "Ayer",
-	"upload.data": "Subir datos",
-	"upload.destination.description": "Envía los datos seleccionados a",
-	"upload.destination.title": "Definir la destinación",
-	"upload.folder.drop": "Arrastra una carpeta",
-	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
+	"upload.add-connector": "Añadir conector",
+	"upload.connectors": "Conectores",
 	"upload.refresh": "Refrescar {{field}}",
 	"upload.s3.region": "Región",
 	"upload.s3.region_help": "Por ejemplo: eu-west-3",
@@ -42,14 +43,17 @@
 	"upload.server.local-button": "Usar servidor local",
 	"upload.server.title": "Conectarse al servidor de sincronización",
 	"upload.server.url": "URL del servidor",
-	"upload.source.confirm-delete": "¿Realmente desea eliminar esta fuente?",
+	"upload.source.confirm-delete-description": "Si eliminas este conector, se cancelarán todas las subidas activas de este conector. No se puede deshacer esta acción.",
+	"upload.source.confirm-delete-title": "¿Estas seguro que quieres eliminar el conector {{name}}?",
 	"upload.source.description": "Elige el origen desde la que quieres subir todos los archivos",
+	"upload.source.destination": "Envía los datos seleccionados a",
 	"upload.source.help": "Consulte la documentación sobre cómo añadir archivos desde {{source}}.",
+	"upload.source.name": "Nombra tu conector",
 	"upload.source.permanent-sync": "Sincronización permanente",
-	"upload.source.quick_access_name": "Nombra tu conector",
+	"upload.source.settings": "Configuración del conector",
+	"upload.source.settings-description": "Nombra y configura tu conector",
 	"upload.source.title": "Origen",
 	"upload.steps.configure": "Configurar",
 	"upload.steps.data": "Elegir datos",
-	"upload.steps.destination": "Destino",
 	"upload.steps.source": "Selecciona el origen"
 }
