--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -3,8 +3,9 @@
 	"account.trial-end.title": "Oh! Votre essai gratuit est terminé",
 	"account.trial-end.upgrade": "Souscrire",
 	"generic.cancel": "Annuler",
+	"generic.delete": "Supprimer",
 	"generic.logout": "Déconnexion",
-	"generic.save_continue": "Enregistrer et continuer",
+	"generic.save": "Enregistrer",
 	"generic.server_down": "Le serveur de synchronisation est en panne",
 	"generic.server_up": "Le serveur de synchronisation est opérationnel",
 	"generic.switch_account": "Changer de compte",
@@ -15,6 +16,9 @@
 	"history.knowledge_box": "Knowledge box",
 	"history.source": "Source",
 	"history.title": "Historique des téléchargements",
+	"home.active-connectors": "ou vérifiez vos connecteurs actifs dans la liste de gauche.",
+	"home.new-connector": "Cliquez sur le bouton ci-dessous pour ajouter un nouveau connecteur à votre compte Nuclia",
+	"home.welcome": "Bienvenu/e",
 	"login.button": "Se connecter",
 	"login.headline": "Le plus simple et le plus rapide moyen de traiter des données",
 	"login.not-connected": "Vous n'êtes pas connecté, cliquez sur le bouton pour vous connecter via votre navigateur",
@@ -25,11 +29,8 @@
 	"pastanaga.datetime.minutesAgo": "Il y a {{minutes}} minutes",
 	"pastanaga.datetime.one-minute-ago": "Il y a 1 minute",
 	"pastanaga.datetime.yesterday": "Hier",
-	"upload.data": "télécharger des données",
-	"upload.destination.description": "Transférez vos données sélectionnées vers",
-	"upload.destination.title": "Définir la destination",
-	"upload.folder.drop": "Poser le dossier ici",
-	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
+	"upload.add-connector": "Ajouter un connecteur",
+	"upload.connectors": "Connecteurs",
 	"upload.refresh": "Rafraîchir {{field}}",
 	"upload.s3.region": "Région",
 	"upload.s3.region_help": "par exemple: eu-west-3",
@@ -42,14 +43,17 @@
 	"upload.server.local-button": "Utiliser le serveur local",
 	"upload.server.title": "Se connecter au serveur de synchronisation",
 	"upload.server.url": "URL du serveur",
-	"upload.source.confirm-delete": "Voulez-vous vraiment supprimer cette source ?",
+	"upload.source.confirm-delete-description": "Si vous supprimez ce connecteur, tous les téléchargements actifs depuis ce connecteur seront annulés. Vous ne pouvez pas annuler cette action.",
+	"upload.source.confirm-delete-title": "Etes-vous sûr que vous voulez supprimer\nConnecteur {{name}} ?",
 	"upload.source.description": "Choisissez la source depuis laquelle télécharger les fichiers",
+	"upload.source.destination": "Poussez les données sélectionnées vers",
 	"upload.source.help": "Reportez-vous à la documentation sur la façon d'ajouter des fichiers à partir de {{source}}.",
+	"upload.source.name": "Nommez votre connecteur",
 	"upload.source.permanent-sync": "Synchronisation permanente",
-	"upload.source.quick_access_name": "Nommez votre connecteur",
+	"upload.source.settings": "Paramètres du connecteur",
+	"upload.source.settings-description": "Nommez et configurez votre connecteur",
 	"upload.source.title": "Source d'origine",
 	"upload.steps.configure": "Configurer",
 	"upload.steps.data": "Choisir les données",
-	"upload.steps.destination": "Destination",
 	"upload.steps.source": "Sélectionner la source"
 }
