--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -3,8 +3,9 @@
 	"account.trial-end.title": "Oh! Your free trial has ended",
 	"account.trial-end.upgrade": "Subscribe",
 	"generic.cancel": "Cancel",
+	"generic.delete": "Delete",
 	"generic.logout": "Log out",
-	"generic.save_continue": "Save & Continue",
+	"generic.save": "Save",
 	"generic.server_down": "Sync server is down",
 	"generic.server_up": "Sync server is up",
 	"generic.switch_account": "Switch account",
@@ -15,6 +16,9 @@
 	"history.knowledge_box": "Knowledge box",
 	"history.source": "Source",
 	"history.title": "Upload history",
+	"home.active-connectors": "or check your active connectors in the list on the the left.",
+	"home.new-connector": "Click the button below to add a new connector to your Nuclia account",
+	"home.welcome": "Welcome",
 	"login.button": "Log in",
 	"login.headline": "The easiest and fastest way to ingest data",
 	"login.not-connected": "You’re not connected, click the button to log in",
@@ -25,11 +29,8 @@
 	"pastanaga.datetime.minutesAgo": "{{minutes}} mins ago",
 	"pastanaga.datetime.one-minute-ago": "1 min ago",
 	"pastanaga.datetime.yesterday": "Yesterday",
-	"upload.data": "Upload data",
-	"upload.destination.description": "Push your selected data to",
-	"upload.destination.title": "Define the destination",
-	"upload.folder.drop": "Drop folder here",
-	"upload.folder.selected": "Selected folder has {{num}} files",
+	"upload.add-connector": "Add connector",
+	"upload.connectors": "Connectors",
 	"upload.refresh": "Refresh {{field}}",
 	"upload.s3.region": "Region",
 	"upload.s3.region_help": "e.g. us-east-1",
@@ -42,14 +43,17 @@
 	"upload.server.local-button": "Use local server",
 	"upload.server.title": "Connect to sync server",
 	"upload.server.url": "Server URL",
-	"upload.source.confirm-delete": "Do you really want to delete this source?",
+	"upload.source.confirm-delete-description": "If you delete this connector, all active uploads from this resource will be canceled. You cannot undo this action.",
+	"upload.source.confirm-delete-title": "Are you sure  you want to delete {{name}} connector?",
 	"upload.source.description": "Choose source for uploads",
+	"upload.source.destination": "Push your selected data to",
 	"upload.source.help": "Refer to our documentation on how to add files from {{source}}.",
+	"upload.source.name": "Name your connector",
 	"upload.source.permanent-sync": "Permanent synchronization",
-	"upload.source.quick_access_name": "Name your connector",
+	"upload.source.settings": "Connector settings",
+	"upload.source.settings-description": "Name and configure your connector",
 	"upload.source.title": "Source integration",
 	"upload.steps.configure": "Configure",
 	"upload.steps.data": "Choose data",
-	"upload.steps.destination": "Destination",
 	"upload.steps.source": "Select the source"
 }
