Improve home page layout
  - update gaps between blocks
  - make all blocks with consistent look
  - remove download desktop block
  - add upload data block
  - update blocks visibility permissions

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -667,16 +667,13 @@
 	"stash.delete_stash": "Delete knowledge box",
 	"stash.delete_stash_data": "Delete the knowledge box and all the contained data",
 	"stash.description": "Description",
-	"stash.desktop.button": "Download desktop app",
-	"stash.desktop.description": "The easiest and fastest way to upload data to Nuclia from (almost) any data source",
-	"stash.desktop.text": "Available for Windows, Mac and Linux",
 	"stash.email": "Email server",
 	"stash.empty_kb": "The knowledge box is empty",
 	"stash.enable_stash_email": "Enable email",
 	"stash.home.link": "Home dashboard",
-	"stash.home.recent_added": "New content",
-	"stash.home.tags.title": "Tag distribution representation",
-	"stash.home.tags.total": "total tags",
+	"stash.home.upload-block.description": "Upload files, folders, links",
+	"stash.home.upload-block.description-desktop": " or choose a source to work with Nuclia with your own database.",
+	"stash.home.upload-block.title": "Work with your data",
 	"stash.invited_user": "We have sent an invitation email to {{user}} to join this knowledge box. ",
 	"stash.kb_name_invalid": "Invalid knowledge box name",
 	"stash.kb_slug_invalid": "Invalid knowledge box slug",
@@ -738,8 +735,9 @@
 	"stash.side.trainings": "Trainings",
 	"stash.side.users": "Users",
 	"stash.side.widgets": "Widgets",
-	"stash.state.private": "State: private",
-	"stash.state.published": "State: public",
+	"stash.state.label": "State: ",
+	"stash.state.private": "private",
+	"stash.state.published": "public",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
 	"stash.upload_data": "Upload data",
