--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -660,16 +660,13 @@
 	"stash.delete_stash": "Supprimer la boîte de connaissances",
 	"stash.delete_stash_data": "Supprimez la boîte de connaissances et toutes les données contenues",
 	"stash.description": "La description",
-	"stash.desktop.button": "Téléchargez l'application de bureau",
-	"stash.desktop.description": "Le moyen le plus simple et le plus rapide de télécharger des données vers Nuclia à partir de (presque) n'importe quelle source de données",
-	"stash.desktop.text": "Disponible pour Windows, Mac et Linux",
 	"stash.email": "Serveur de messagerie",
 	"stash.empty_kb": "La boîte de connaissances est vide",
 	"stash.enable_stash_email": "Activer l'e-mail",
 	"stash.home.link": "Tableau de bord d'accueil",
-	"stash.home.recent_added": "Nouveau contenu",
-	"stash.home.tags.title": "Représentation de la distribution des balises",
-	"stash.home.tags.total": "Nombre total de balises",
+	"stash.home.upload-block.description": "Téléchargez des fichiers, des dossiers, des liens",
+	"stash.home.upload-block.description-desktop": " ou choisissez une source pour travailler avec Nuclia avec votre propre base de données.",
+	"stash.home.upload-block.title": "Travaillez avec vos données",
 	"stash.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour rejoindre cette boîte de connaissances.",
 	"stash.kb_name_invalid": "Nom de la boîte de connaissances invalide",
 	"stash.kb_slug_invalid": "Limace de boîte de connaissances invalide",
@@ -731,8 +728,9 @@
 	"stash.side.trainings": "Entraînements",
 	"stash.side.users": "Utilisateurs",
 	"stash.side.widgets": "Widgets",
-	"stash.state.private": "Etat : privé",
-	"stash.state.published": "Etat : public",
+	"stash.state.label": "État : ",
+	"stash.state.private": "privé",
+	"stash.state.published": "public",
 	"stash.stats": "Les données",
 	"stash.title": "Titre de la boîte",
 	"stash.upload_data": "Télécharger des données",
