--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -664,16 +664,13 @@
 	"stash.delete_stash": "Eliminar caixa de coneixement",
 	"stash.delete_stash_data": "Elimina la caixa de coneixament i totes les dades que conté",
 	"stash.description": "Descipció",
-	"stash.desktop.button": "Descarregar Desktop app",
-	"stash.desktop.description": "La forma més fàcil i ràpida d'ingerir dades a Nuclia",
-	"stash.desktop.text": "Disponible per a Windows, Mac i Linux",
 	"stash.email": "Servidor de correu",
 	"stash.empty_kb": "La caixa de coneixement encara està buida!",
 	"stash.enable_stash_email": "Habilitar correu electrònic",
 	"stash.home.link": "Tauler d'inici",
-	"stash.home.recent_added": "Continguts nous",
-	"stash.home.tags.title": "Gràfica de distribució de tags",
-	"stash.home.tags.total": "tags en total",
+	"stash.home.upload-block.description": "Carregueu fitxers, carpetes, enllaços",
+	"stash.home.upload-block.description-desktop": " o trieu una font per treballar amb Nuclia amb la vostra pròpia base de dades.",
+	"stash.home.upload-block.title": "Treballa amb les teves dades",
 	"stash.invited_user": "L'usuari {{user}} ha rebut un correu amb una invitació a participar a la caixa de coneixement",
 	"stash.kb_name_invalid": "El nom de la caixa de coneixement no és vàlid",
 	"stash.kb_slug_invalid": "El slug de la caixa de coneixement no és vàlid",
@@ -735,8 +732,9 @@
 	"stash.side.trainings": "Entrenaments",
 	"stash.side.users": "Usuaris",
 	"stash.side.widgets": "Widgets",
-	"stash.state.private": "Estat: privat",
-	"stash.state.published": "Estat: públic",
+	"stash.state.label": "Estat: ",
+	"stash.state.private": "privat",
+	"stash.state.published": "públic",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
 	"stash.upload_data": "Pujar dades",
