--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -664,16 +664,13 @@
 	"stash.delete_stash": "Borrar caja de conocimiento",
 	"stash.delete_stash_data": "Elimina la caja de conocimiento y todos los datos que contiene",
 	"stash.description": "Descripción",
-	"stash.desktop.button": "Descargar Desktop app",
-	"stash.desktop.description": "La manera fácil y rápida de ingerir datos en Nuclia",
-	"stash.desktop.text": "Disponible para Windows, Mac y Linux",
 	"stash.email": "Servidor de correo",
 	"stash.empty_kb": "!La caja de conocimiento aun está vacía!",
 	"stash.enable_stash_email": "Habilitar correo electrónico",
 	"stash.home.link": "Panel de inicio",
-	"stash.home.recent_added": "Nuevos contenidos",
-	"stash.home.tags.title": "Gráfica de distribución de tags",
-	"stash.home.tags.total": "tags en total",
+	"stash.home.upload-block.description": "Subir archivos, carpetas, enlaces.",
+	"stash.home.upload-block.description-desktop": " o elige una fuente para trabajar con Nuclia con tu propia base de datos.",
+	"stash.home.upload-block.title": "Trabaja con tus datos",
 	"stash.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta caja de conocimiento",
 	"stash.kb_name_invalid": "El nombre de la caja de conocimiento no es válido",
 	"stash.kb_slug_invalid": "El slug de la caja de conocimiento no es válido",
@@ -735,8 +732,9 @@
 	"stash.side.trainings": "Entrenamientos",
 	"stash.side.users": "Usuarios",
 	"stash.side.widgets": "Widgets",
-	"stash.state.private": "Estado: privado",
-	"stash.state.published": "Estado: público",
+	"stash.state.label": "Estado: ",
+	"stash.state.private": "privado",
+	"stash.state.published": "público",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
 	"stash.upload_data": "Subir datos",
