New Upload data page
  - Add source logos in home page
  - Add upload data page in navbar and routing
  - Use same desktop sources component in home page and upload data page
  - Open upload dialog and Desktop app from upload-data page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -737,6 +737,12 @@
 	"stash.state.published": "públic",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
+	"stash.upload.option.csv": "Recursos CSV",
+	"stash.upload.option.file": "Dossier",
+	"stash.upload.option.folder": "Carpeta",
+	"stash.upload.option.links": "Enllaços",
+	"stash.upload.option.q-and-a": "Preguntes",
+	"stash.upload.page-subtitle": "Podeu pujar directament els vostres fitxers, enllaços, recursos o carpeta",
 	"stash.upload_data": "Pujar dades",
 	"stash.upload_to_search": "Puja dades per comença a utilitzar el motor de cerca.",
 	"stash.users.new_user": "Afegir nou usuari",
