--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -740,6 +740,12 @@
 	"stash.state.published": "public",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
+	"stash.upload.option.csv": "Resources CSV",
+	"stash.upload.option.file": "File",
+	"stash.upload.option.folder": "Folder",
+	"stash.upload.option.links": "Links",
+	"stash.upload.option.q-and-a": "Q&A",
+	"stash.upload.page-subtitle": "You can directly upload your files, links, resources or folder",
 	"stash.upload_data": "Upload data",
 	"stash.upload_to_search": "Upload data to start using the AI-search engine.",
 	"stash.users.new_user": "Add new user",
