--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -737,6 +737,12 @@
 	"stash.state.published": "público",
 	"stash.stats": "Datos",
 	"stash.title": "Título de la caja",
+	"stash.upload.option.csv": "Recursos CSV",
+	"stash.upload.option.file": "Expediente",
+	"stash.upload.option.folder": "Carpeta",
+	"stash.upload.option.links": "Enlaces",
+	"stash.upload.option.q-and-a": "Preguntas y respuestas",
+	"stash.upload.page-subtitle": "Puede cargar directamente sus archivos, enlaces, recursos o carpetas.",
 	"stash.upload_data": "Subir datos",
 	"stash.upload_to_search": "Sube datos para empezar a utilizar el motor de búsqueda.",
 	"stash.users.new_user": "Añadir nuevo usuario",
