--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -733,6 +733,12 @@
 	"stash.state.published": "public",
 	"stash.stats": "Les données",
 	"stash.title": "Titre de la boîte",
+	"stash.upload.option.csv": "Ressources CSV",
+	"stash.upload.option.file": "Fichier",
+	"stash.upload.option.folder": "Dossier",
+	"stash.upload.option.links": "Liens",
+	"stash.upload.option.q-and-a": "Q&R",
+	"stash.upload.page-subtitle": "Vous pouvez directement télécharger vos fichiers, liens, ressources ou dossiers",
 	"stash.upload_data": "Télécharger des données",
 	"stash.upload_to_search": "Téléchargez des données pour commencer à utiliser le moteur de recherche AI.",
 	"stash.users.new_user": "Ajouter un nouvel utilisateur",
