Finish upload data page
  - Redirect to resources page after upload
  - Display explicit download and open options for Nuclia desktop
  - Add missing translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -737,6 +737,9 @@
 	"stash.state.published": "públic",
 	"stash.stats": "Dades",
 	"stash.title": "Títol de la caixa",
+	"stash.upload.desktop.description": "La manera més fàcil i ràpida de carregar dades a Nuclia des de les vostres fonts de dades",
+	"stash.upload.desktop.download": "Descarrega Nuclia Desktop",
+	"stash.upload.desktop.open": "Obriu Nuclia Desktop",
 	"stash.upload.option.csv": "Recursos CSV",
 	"stash.upload.option.file": "Dossier",
 	"stash.upload.option.folder": "Carpeta",
