--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -740,6 +740,9 @@
 	"stash.state.published": "public",
 	"stash.stats": "Data",
 	"stash.title": "Title of the box",
+	"stash.upload.desktop.description": "The easiest and fastest way to upload data to Nuclia from your data sources",
+	"stash.upload.desktop.download": "Download Nuclia Desktop",
+	"stash.upload.desktop.open": "Open Nuclia Desktop",
 	"stash.upload.option.csv": "Resources CSV",
 	"stash.upload.option.file": "File",
 	"stash.upload.option.folder": "Folder",
