--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -733,6 +733,9 @@
 	"stash.state.published": "public",
 	"stash.stats": "Les données",
 	"stash.title": "Titre de la boîte",
+	"stash.upload.desktop.description": "La manière la plus simple et la plus rapide de charger des données dans Nuclia à partir de vos sources de données",
+	"stash.upload.desktop.download": "Télécharger Nuclia Desktop",
+	"stash.upload.desktop.open": "Ouvrir Nuclia Desktop",
 	"stash.upload.option.csv": "Ressources CSV",
 	"stash.upload.option.file": "Fichier",
 	"stash.upload.option.folder": "Dossier",
